# alt_core

./: CMakeLists.txt
src/: CMakeLists.txt
src/alt/: array.hpp  hash.cpp  hash.hpp  hash_table.hpp  list.hpp  log.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp  util.hpp
test/: CMakeLists.txt  test.cpp
